--- a/journal/2021-10-21.md
+++ b/journal/2021-10-21.md
@@ -1,3 +1,24 @@
 # Thursday, October 21, 2021
 
-Today
+## Useful tips using foam
+#autoformat-table, #paste-an-image #navigate-graph #note-properties
+
+- `alt+shift+f` formats a table.
+- Paste an image
+  1. copy an image
+  2. move your cursor to the next line, then press `cmd+alt+v` and confirm the name of the file
+  3. .
+  4. the image file has been created in `/attachments` and a reference to it has been added here
+- Navigate to a note by clicking on it while pressing `ctrl` or `cmd`
+- the `title` property will assign the name to the note that you will see in the graph, regardless of the filename or the first heading
+- the `type` property can be used to style notes differently in the graph
+- the `tags` property can be used to add tags to a note 
+
+```text
+---
+type: feature
+keywords: hello world
+---
+```
+
+
