--- a/journal/2021-10-21.md
+++ b/journal/2021-10-21.md
@@ -1,3 +1,8 @@
+---
+title: Useful tips using foam
+create-date: Thursday, October 21, 2021
+---
+
 # Thursday, October 21, 2021
 
 ## Useful tips using foam
